# Flux

./: .gitignore  Makefile  conda.yml  flux.ipynb  graph  lint.sh  main.py  pyproject.toml
flux/integration/: base_integrator.py  posterior_integrator.py
flux/models/: integrand.py
flux/models/couplings/: __init__.py  base.py  couplings.py
flux/models/flows/: __init__.py  base.py  flows.py
flux/models/integrands/: __init__.py  base.py
flux/models/integrators/: __init__.py  base.py  fsdp.py  integrators.py  multprocessing.py
flux/models/masks/: __init__.py  base.py  masks.py
flux/models/samplers/: __init__.py  base.py  samplers.py
flux/models/trainables/: __init__.py  base.py  trainable.py
flux/models/trainers/: __init__.py  base.py  trainers.py
flux/models/transforms/: __init__.py  base.py  pwlinear_transform.py  pwquadratic_transform.py  transforms.py
flux/training/: sampler.py
flux/utils/: constants.py  distributed.py  fsdb.py  integrands.py  logging.py  long_integrand.py  loss.py  pgm.py  plotter.py  reshift.py  short_integrand.py
