[tool.poetry]
name = "flux"
version = "0.0.1"
description = "flux"
authors = []

[tool.poetry.dependencies]
python = "3.7.*"
abc-property = "*"
numpy = "1.19.1"
pandas = "1.1.0"
torch = "1.6.0"
torchps = "1.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "*"
isort = "*"
black = "*"
autoflake = "*"

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.isort]
profile = "black"
py_version = 37
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true
ensure_newline_before_comments = true
wrap_length = 120
line_length = 120

[tool.mypy]
python_version = "3.7"
ignore_missing_imports = true
strict = true
