[tool.poetry]
name = "flux"
version = "0.0.1"
description = "flux"
authors = []

[tool.poetry.dependencies]
python = "3.10.*"
abc-property = "*"
numpy = "*"
pandas = "*"
torch = "2.1.0"
matplotlib = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "*"
isort = "*"
black = "*"
autoflake = "*"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true
ensure_newline_before_comments = true
wrap_length = 120
line_length = 120

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true
